sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: ';' expected but ')' found.
  var ecart:int = getNombreValeurs) -1
                                  ^